[Evo] ref #3445 - Improve global graphic design
- Improve graphic design of profil page
- Add file size in document data

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -208,7 +208,7 @@
         "consult_document": "Voir le document",
         "search_by_name": "Recherche par nom",
         "type_a_name": "Saisir un nom",
-        "file_acceptation_rules": "Le fichier doit être au format {{types}} et d'une taille maximum de {{sizeMax}}",
+        "file_acceptation_rules": "Les fichiers doivent être au format {{types}} et d'une taille maximale de {{sizeMax}}",
         "sign_classeur": "Signer le classeur",
         "sign_classeur_plural": "Signer les classeurs",
         "sign_several_classeurs": "Signer plusieurs classeurs",
@@ -328,7 +328,7 @@
             "subtitle_geo": "Informations géographiques",
             "subtitle_application": "Informations applications",
             "subtitle_role": "Rôles de l'utilisateur",
-            "image_avatar": "avatar",
+            "image_avatar": "photo de profil",
             "image_signature": "signature",
             "label_email": "Email",
             "placeholder_email": "Email de l'utilisateur",
