[EVO] ref #3983 pouvoir modifier la visibilité du classeur

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -134,7 +134,8 @@
             },
             "label": {
                 "circuits": "Liste des circuits",
-                "types": "Type de classeur"
+                "types": "Type de classeur",
+                "visibility": "Visibilité"
             },
             "button": {
                 "add_classeur": "Nouveau classeur",
