--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -222,7 +222,8 @@
         "research": "Recherche",
         "download": "Télécharger",
         "error_loading_classeur": "Une erreur est survenue lors du chargement de la liste",
-        "electronic_signature": "Signature électronique"
+        "electronic_signature": "Signature électronique",
+        "stakeholders": "Intervenants"
     },
     "admin": {
         "title": "Rechercher un {{name}}",
