[Evo] ref #4185 - List migration history and export user action
- Add list of migration history in migration page
- Sort migraiton history by date 
- lanuch migration

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -226,7 +226,9 @@
         "stakeholders": "Intervenants",
         "siren": "siren",
         "type_siren_collectivite": "Saisir le SIREN de la colléctivité",
-        "migrate": "migrer"
+        "migrate": "migrer",
+        "migration_is_begin": "La migration a été lancée",
+        "empty_list": "Aucun élements à afficher"
     },
     "admin": {
         "title": "Rechercher un {{name}}",
