--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -222,7 +222,7 @@
         "select_collectivite": "Sélectionner la collectivité",
         "research": "Recherche",
         "download": "Télécharger",
-        "error_loading_classeur": "Une erreur est survenue lors du chargement de la liste",
+        "error_loading_list": "Une erreur est survenue lors du chargement de la liste",
         "electronic_signature": "Signature électronique",
         "stakeholders": "Intervenants",
         "siren": "siren",
@@ -237,7 +237,9 @@
         "error_fetch_migration_list": "Une erreur est survenue lors de la récupération de la liste de migrations",
         "waiting_action_on_ozwillo": "En attente d'une action sur ozwillo",
         "export_users": "Exporter les utilisateurs",
-        "migration_list": "Liste des migrations"
+        "migration_list": "Liste des migrations",
+        "collectivite_not_provisioned_on_ozwillo": "La collectivité n'est pas provisionnée sur Ozwillo",
+        "error_fetch_ozwillo": "Une erreur est survenue lors de l'appel "
     },
     "admin": {
         "title": "Rechercher un {{name}}",
@@ -258,7 +260,7 @@
             "not_removable": "Impossible de supprimer le {{name}} - erreur {{errorCode}}",
             "add_user": "Impossible d'ajouter l'utilisateur - erreur {{errorCode}}",
             "add_user_plural": "Impossible d'ajouter l'utilisateur - erreur {{errorCode}}",
-            "ozwillo_instance_users": "Désolé vous n'avez pas accès à la liste d'utilisateurs."
+            "ozwillo_instance_users": "Désolé vous n'avez pas accès à la liste d'utilisateurs Ozwillo."
         },
         "success": {
             "add": "Ajout de {{name}}",
