--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -239,7 +239,9 @@
         "export_users": "Exporter les utilisateurs",
         "migration_list": "Liste des migrations",
         "collectivite_not_provisioned_on_ozwillo": "La collectivité n'est pas provisionnée sur Ozwillo",
-        "error_fetch_ozwillo": "Une erreur est survenue lors de l'appel "
+        "error_fetch_ozwillo": "Une erreur est survenue lors de l'appel ",
+        "error_global_classeur_research": "Une erreur est survenu sur le serveur lors de la recherche",
+        "no_result_globel_classeur_research": "Aucun classeur ne correspond à votre recherche"
     },
     "admin": {
         "title": "Rechercher un {{name}}",
