[Evo] Ref #4175 - Side menu for admin instead of Admin Menu Bar
-fix back to application icon and text
-fix header color change when in admin panel

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -495,7 +495,7 @@
             "name_plural": "roles"
         },
         "migration": "Migration",
-        "backuser": "Retour Utilisateur"
+        "backuser": "Application"
     },
     "classeur": {
         "name": "Classeur",
