[Evo] Redesign groupes list
- all in table
- remove unnecessary labels
- dropdown list for user

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -210,6 +210,7 @@
         },
         "consult_document": "Voir le document",
         "search_by_name": "Recherche par nom",
+        "search_by_groupname": "Recherche par groupe",
         "type_a_name": "Saisir un nom",
         "file_acceptation_rules": "Les fichiers doivent être au format {{types}} et d'une taille maximale de {{sizeMax}}",
         "sign_classeur": "Signer le classeur",
