[Evo] Ref #4823 - Graphic Upgrade Help
- panel for each section

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -202,7 +202,7 @@
             "upadate_account": "Modifier mon profil"
         },
         "help_board":{
-            "title": "Documentations et aides",
+            "title": "Aides",
             "title_patchs": "Mises à jour",
             "title_helps": "Aides",
             "title_video": "Vidéos",
