--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -244,7 +244,9 @@
         "no_result_globel_classeur_research": "Aucun classeur ne correspond à votre recherche",
         "no_certificat": "Aucun certificat détecté",
         "expand_preview": "Agrandir",
-        "description_not_specified": "Description non renseigné"
+        "description_not_specified": "Description non renseigné",
+        "search_by_user": "Recherche par utilisateur",
+        "search_by_circuit": "Recherche par circuit"
     },
     "admin": {
         "title": "{{name}}",
