[Evo] Ref #4872 - Upgrade Admin User Edit
- panel for each block
- manage layout

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -362,7 +362,7 @@
             "subtitle_signature": "Informations signatures",
             "subtitle_certificate": "Informations certificat",
             "subtitle_geo": "Informations géographiques",
-            "subtitle_application": "Informations applications",
+            "subtitle_application": "Informations technique",
             "subtitle_role": "Rôles de l'utilisateur",
             "image_avatar": "photo de profil",
             "image_signature": "signature",
