[Evo] Ref #4918 - Upgrade Collectivite List
- list in table
- click on line to edit
- ozwillo favicon for list add user

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -402,6 +402,7 @@
         },
         "collectivite": {
             "title": "Rechercher une collectivité",
+            "domain": "Domaine",
             "name": "collectivité",
             "name_plural": "Collectivités",
             "message": "Message d'accueil",
