--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -43,7 +43,7 @@
             "update": "Mettre à jour",
             "save": "Enregistrer",
             "edit": "Editer",
-            "list_ozwillo": "Ajouter des utilisateurs",
+            "list_ozwillo": "Liste utilisateurs Ozwillo",
             "change_img": "Changer l'image",
             "upload_img": "Ajouter une image",
             "delete_img": "Supprimer l'image",
