[Fix] Ref #5007 - Improve component of classeur creation

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -98,7 +98,7 @@
             "title_to_retract": "classeur retractable",
             "title_remove": "classeur supprimable",
             "title_to_sign_plural": "classeurs à signer",
-            "title_add": "Création d'un nouveau classeur",
+            "title_add": "Nouveau classeur",
             "title_infos": "Informations générales",
             "sort": "trier",
             "search": "Une recherche ?",
