[Evo] Ref #5164 - Disabel all command in classeur during signature

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -118,7 +118,8 @@
                 "finished": "Finalisé",
                 "withdrawn": "Retiré",
                 "retracted": "Rétracté",
-                "waiting": "En attente"
+                "waiting": "En attente",
+                "progressSign": "En cours de signature"
             },
             "pagination" : {
                 "previous": "Précédent",
