[Evo] Ref#5386 - Add status column users list

--- a/web/locales/fr/sesile.json
+++ b/web/locales/fr/sesile.json
@@ -205,6 +205,8 @@
             "validity": "validité",
             "from": "émis le",
             "to": "expire le",
+            "enabled" : "Actif",
+            "disabled": "Inactif",
             "upadate_account": "Modifier mon profil"
         },
         "help_board":{
